--- a/src/Plugins/SmartStore.AmazonPay/web.config
+++ b/src/Plugins/SmartStore.AmazonPay/web.config
@@ -119,6 +119,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.14.5506.26196" newVersion="5.14.5506.26196" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
