--- a/src/Tests/SmartStore.Web.MVC.Tests/App.config
+++ b/src/Tests/SmartStore.Web.MVC.Tests/App.config
@@ -69,6 +69,10 @@
         <assemblyIdentity name="System.Web.Http.WebHost" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.14.5506.26196" newVersion="5.14.5506.26196" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
