Added column with export file number in export profile list

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -535,6 +535,8 @@
     <Content Include="Views\UrlRecord\Edit.cshtml" />
     <Content Include="Views\UrlRecord\_CreateOrUpdate.cshtml" />
     <Content Include="Views\UrlRecord\NamesPerEntity.cshtml" />
+    <Content Include="Views\Export\ProfileFileCount.cshtml" />
+    <Content Include="Views\Export\ProfileFileDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
