--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -6,6 +6,7 @@
   <package id="EPPlus" version="4.0.3" targetFramework="net45" />
   <package id="ImageResizer" version="4.0.4" targetFramework="net451" />
   <package id="ImageResizer.Plugins.PrettyGifs" version="4.0.4" targetFramework="net451" />
+  <package id="LumenWorksCsvReader" version="3.9" targetFramework="net451" />
   <package id="MaxMind.GeoIP" version="2.1.17" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
