--- a/src/Tests/SmartStore.Services.Tests/SmartStore.Services.Tests.csproj
+++ b/src/Tests/SmartStore.Services.Tests/SmartStore.Services.Tests.csproj
@@ -95,6 +95,8 @@
     <Compile Include="Configuration\ConfigurationProviderTests.cs" />
     <Compile Include="Customers\CustomerExtensionTests.cs" />
     <Compile Include="Customers\CustomerRegistrationServiceTests.cs" />
+    <Compile Include="DataExchange\CsvWriterTests.cs" />
+    <Compile Include="DataExchange\DataReaderTests.cs" />
     <Compile Include="DataExchange\SyncMappingServiceTests.cs" />
     <Compile Include="Directory\CurrencyServiceTests.cs" />
     <Compile Include="Directory\TestExchangeRateProvider.cs" />
