Fixed some broken unit tests

--- a/src/Tests/SmartStore.Services.Tests/App.config
+++ b/src/Tests/SmartStore.Services.Tests/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <configSections>
     <section name="SmartStoreConfig" type="SmartStore.Core.Configuration.SmartStoreConfig, SmartStore.Core" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <SmartStoreConfig>
     <DynamicDiscovery Enabled="true" />
@@ -11,14 +13,15 @@
     <add key="Setting1" value="SomeValue" />
     <add key="Setting2" value="25" />
     <add key="Setting3" value="12/25/2010" />
-
     <add key="TestSettings.ServerName" value="Ruby" />
     <add key="TestSettings.Ip" value="192.168.0.1" />
     <add key="TestSettings.PortNumber" value="21" />
     <add key="TestSettings.Username" value="admin" />
     <add key="TestSettings.Password" value="password" />
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -35,4 +38,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
