Implemented and registered converters for ColumnMap and CsvConfiguration classes (for database persistence)

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Common\UAParserUserAgent.cs" />
     <Compile Include="Customers\CustomerRegisteredEvent.cs" />
     <Compile Include="DataExchange\ColumnMap.cs" />
+    <Compile Include="DataExchange\ColumnMapConverter.cs" />
+    <Compile Include="DataExchange\Csv\CsvConfigurationConverter.cs" />
     <Compile Include="DataExchange\Csv\CsvConfiguration.cs" />
     <Compile Include="DataExchange\Csv\CsvDataReader.cs" />
     <Compile Include="DataExchange\Csv\CsvWriter.cs" />
