Namespace rename: SmartStore.Web.Framework.Themes -> SmartStore.Web.Framework.Theming

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -255,10 +255,10 @@
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="Seo\CanonicalHostNameAttribute.cs" />
     <Compile Include="SmartUrlRoutingModule.cs" />
-    <Compile Include="Themes\LocalizedDisplayMode.cs" />
-    <Compile Include="Themes\ThemeFileResolver.cs" />
-    <Compile Include="Themes\InheritedVirtualThemeFile.cs" />
-    <Compile Include="Themes\TwoLevelViewLocationCache.cs" />
+    <Compile Include="Theming\LocalizedDisplayMode.cs" />
+    <Compile Include="Theming\ThemeFileResolver.cs" />
+    <Compile Include="Theming\InheritedVirtualThemeFile.cs" />
+    <Compile Include="Theming\TwoLevelViewLocationCache.cs" />
     <Compile Include="UI\Components\Menu\AdminMenuProvider.cs" />
     <Compile Include="UI\Components\Menu\MenuPublisher.cs" />
     <Compile Include="UI\HtmlAttribute.cs" />
@@ -278,14 +278,14 @@
     <Compile Include="Seo\GenericPathRouteExtensions.cs" />
     <Compile Include="Settings\StoreDependingSettingData.cs" />
     <Compile Include="Settings\StoreDependingSettingHelper.cs" />
-    <Compile Include="Themes\LessCssHttpHandler.cs" />
-    <Compile Include="Themes\SmartStyleBundle.cs" />
-    <Compile Include="Themes\ThemeHelper.cs" />
-    <Compile Include="Themes\ThemeVarsVirtualFile.cs" />
-    <Compile Include="Themes\ThemingVirtualPathProvider.cs" />
-    <Compile Include="Themes\ThemeHtmlExtensions.cs" />
+    <Compile Include="Theming\LessCssHttpHandler.cs" />
+    <Compile Include="Theming\SmartStyleBundle.cs" />
+    <Compile Include="Theming\ThemeHelper.cs" />
+    <Compile Include="Theming\ThemeVarsVirtualFile.cs" />
+    <Compile Include="Theming\ThemingVirtualPathProvider.cs" />
+    <Compile Include="Theming\ThemeHtmlExtensions.cs" />
     <Compile Include="FrameworkCacheConsumer.cs" />
-    <Compile Include="Themes\ThemeVarsRepository.cs" />
+    <Compile Include="Theming\ThemeVarsRepository.cs" />
     <Compile Include="UI\Components\ComponentRendererUtils.cs" />
     <Compile Include="UI\Components\Menu\MenuExtensions.cs" />
     <Compile Include="UI\Components\Menu\NavigationModel.cs" />
@@ -334,10 +334,10 @@
     <Compile Include="Security\RequireHttpsByConfigAttribute.cs" />
     <Compile Include="Localization\TelerikLocalizationService.cs" />
     <Compile Include="Localization\TelerikLocalizationServiceFactory.cs" />
-    <Compile Include="Themes\IThemeContext.cs" />
-    <Compile Include="Themes\ThemeableVirtualPathProviderViewEngine.cs" />
-    <Compile Include="Themes\ThemeableRazorViewEngine.cs" />
-    <Compile Include="Themes\ThemeContext.cs" />
+    <Compile Include="Theming\IThemeContext.cs" />
+    <Compile Include="Theming\ThemeableVirtualPathProviderViewEngine.cs" />
+    <Compile Include="Theming\ThemeableRazorViewEngine.cs" />
+    <Compile Include="Theming\ThemeContext.cs" />
     <Compile Include="UI\Components\BadgeStyle.cs" />
     <Compile Include="UI\Components\Button\Button.cs" />
     <Compile Include="UI\Components\Component.cs" />
