--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -154,7 +154,7 @@
       <add name="robots" path="robots.txt" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
       <!-- *.less -->
       <remove name="LessAssetHandler" />
-      <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
+      <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Theming.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
       <!-- WebApi -->
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
