Namespace rename: SmartStore.Web.Framework.Mvc.Routes -> SmartStore.Web.Framework.Routing

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -267,13 +267,13 @@
     <Compile Include="Localization\IText.cs" />
     <Compile Include="Localization\LocalizedUrlHelper.cs" />
     <Compile Include="Localization\Text.cs" />
-    <Compile Include="Mvc\Bundles\BundlePublisher.cs" />
-    <Compile Include="Mvc\Bundles\IBundleProvider.cs" />
-    <Compile Include="Mvc\Bundles\IBundlePublisher.cs" />
+    <Compile Include="Bundling\BundlePublisher.cs" />
+    <Compile Include="Bundling\IBundleProvider.cs" />
+    <Compile Include="Bundling\IBundlePublisher.cs" />
     <Compile Include="Mvc\CommaSeparatedModelBinder.cs" />
     <Compile Include="Plugins\PluginDebugViewVirtualPathProvider.cs" />
     <Compile Include="Controllers\PublicStoreAllowNavigationAttribute.cs" />
-    <Compile Include="Mvc\Routes\GuidConstraint.cs" />
+    <Compile Include="Routing\GuidConstraint.cs" />
     <Compile Include="Seo\GenericPathRoute.cs" />
     <Compile Include="Seo\GenericPathRouteExtensions.cs" />
     <Compile Include="Settings\StoreDependingSettingData.cs" />
@@ -318,10 +318,10 @@
     <Compile Include="Localization\ILocalizedModel.cs" />
     <Compile Include="Localization\ILocalizedModelLocal.cs" />
     <Compile Include="Mvc\DeleteConfirmationModel.cs" />
-    <Compile Include="Mvc\Routes\IRouteProvider.cs" />
-    <Compile Include="Mvc\Routes\IRoutePublisher.cs" />
+    <Compile Include="Routing\IRouteProvider.cs" />
+    <Compile Include="Routing\IRoutePublisher.cs" />
     <Compile Include="Mvc\SmartDependencyResolver.cs" />
-    <Compile Include="Mvc\Routes\RoutePublisher.cs" />
+    <Compile Include="Routing\RoutePublisher.cs" />
     <Compile Include="Mvc\SmartMetadataProvider.cs" />
     <Compile Include="Mvc\SmartModelBinder.cs" />
     <Compile Include="Localization\SmartResourceDisplayName.cs" />
